fixes for left align items in categories

--- a/web/web_client/components/list-items/list-items.less
+++ b/web/web_client/components/list-items/list-items.less
@@ -1,3 +1,7 @@
+list-items {
+  width: 100%;
+  max-width: 1250px;
+}
 .list-items {
   color: white;
   width: 100%;
