--- a/web/web_client/components/play-items/playItems.less
+++ b/web/web_client/components/play-items/playItems.less
@@ -1,3 +1,7 @@
+play-items {
+  width: 100%;
+  max-width: 1250px;
+}
 .play-items {
   color: white;
   width: 100%;
